--- a/6day/index.html
+++ b/6day/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-    <body>
-    <div class="frame">
-      <div class="center">
-          <div class="header">
-            <span class="title big">Weekly report</span>
-            <span class="date small">01. Feb - 07. Feb</span>
-            <span class="type small">Revenue</span>
-            <span class="value big">$ 3621.79</span>
-          </div>
-          
-      </div>
-      </div>
-    </body>
-</html> 
+<div class="frame">
+  <div class="center">
+		<div class="profile">
+			<div class="round-1"></div>
+			<div class="round-2"></div>
+			<div class="image"></div>
+			<div class="name">parksangmin</div>
+			<div class="job">front Developer</div>
+			<button>Follow</button>
+			<button>Message</button>
+		</div>
+		<div class="posts number big"></div>
+		<div class="likes number big"></div>
+		<div class="Follower number big"></div>
+  </div>
+</div>
